vote API fix